Added more Filters

--- a/style.css
+++ b/style.css
@@ -82,4 +82,10 @@
     text-align: center;
     background-color: #f1f1f1;
   }
+  #prod_unit_filter2{
+    width: 20%;
+  }
+  #prod_unit_filter{
+    width: 20%;
+  }
   
