--- a/style.css
+++ b/style.css
@@ -36,6 +36,19 @@
     width: 25%;
     padding: 0 10px;
   }
+  .creator .column{
+    float: left;
+    width:33%;
+    padding: 0 10px;
+}
+.creator .row {
+    margin: 0 -5px;
+}
+.creator .row:after{
+    content: "";
+    display: table;
+    clear: both;
+}
 
   .double-table .column{
       float: left;
@@ -63,6 +76,11 @@
   
   /* Responsive columns */
   @media screen and (max-width: 600px) {
+    .creator .column {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
     .overview-header .column {
       width: 100%;
       display: block;
@@ -87,5 +105,23 @@
   }
   #prod_unit_filter{
     width: 20%;
+  }
+  .footer {
+    position:absolute;
+    width: 100%;
+    margin-top: 50px;
+    margin-left: -8;
+    background-color: #414042;
+    color: #f2f2f2;
+    text-align: center;
+    padding-top: 50px;
+    padding-left: 20%;
+    padding-right: 20%;
+  }
+  .footer img {
+    border: 3px solid #f2f2f2;
+    margin-bottom: 10px;
+    width: 45%;
+    border-radius: 50%;
   }
   
